# moveit_middleware_benchmark

./: CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  action.yml  index.html  index.js  middleware_benchmark_results.json  moveit_middleware_benchmark.repos  package.xml
.github/workflows/: create_docker_image.yml  industrial_ci.yml  run_benchmarks.yml  test_moveit_middleware_benchmark_action.yml
config/: pick_place_demo_configs.yaml  scenario_perception_pipeline_test_cases.yaml  scenario_servo_pipeline_test_cases.yaml  test_scenario_perception_pipeline.yaml
dev/bench/: data.js
docs/: how_to_install.md  how_to_run.md  index.md
docs/scenarios/: basic_service_client_benchmark.md  basic_topic_sub_pub.md  moveit_task_constructor_benchmark.md  moveit_task_construtor_benchmark.md  perception_pipeline_benchmark.md
docs/videos/: moveit_task_constructor_benchmark.webm
include/moveit_middleware_benchmark/scenario_basic_service_client/: scenario_basic_service_client.hpp
include/moveit_middleware_benchmark/scenario_perception_pipeline/: scenario_perception_pipeline.hpp
include/moveit_middleware_benchmark/scenarios/: scenario_basic_service_client.hpp  scenario_basic_subscription.hpp  scenario_perception_pipeline.hpp  scenario_servo_pipeline.hpp
include/moveit_middleware_benchmark/scenarios/basic_topic_sub_pub/: scenario_basic_subscription.hpp
include/moveit_middleware_benchmark/scenarios/moveit_task_constructor/: pick_place_task.hpp  scenario_moveit_task_constructor.hpp
launch/: moveit_middleware_benchmark_demo.launch.py  scenario_basic_service_client_benchmark.launch.py  scenario_basic_subscription_benchmark.launch.py  scenario_moveit_task_constructor_benchmark.launch.py  scenario_perception_pipeline_benchmark.launch.py  servo_benchmark.launch.py  test_scenario_octomap_creation.launch.py  test_scenario_perception_pipeline.launch.py
middleware_configurations/rmw_cyclonedds/: config.sh
middleware_configurations/rmw_fastrtps/: config.sh
middleware_configurations/rmw_zenoh/: config.sh  config_rmw_zenoh.sh
rmw_cyclonedds/: common.js  data.js
rmw_fastrtps/: common.js  data.js
scripts/: box_plot_visualizer.py  run_all_benchmarks.sh
src/: scenario_basic_service_client_benchmark_main.cpp  scenario_basic_subscription_benchmark_main.cpp  scenario_moveit_task_constructor_benchmark_main.cpp  scenario_perception_pipeline_benchmark_main.cpp  servo_benchmark_main.cpp
src/scenario_basic_service_client/: CMakeLists.txt  scenario_basic_service_client.cpp  scenario_basic_service_client_benchmark_main.cpp
src/scenario_perception_pipeline/: CMakeLists.txt  scenario_perception_pipeline.cpp  scenario_perception_pipeline_benchmark_main.cpp
src/scenarios/: scenario_basic_service_client.cpp  scenario_basic_subscription.cpp  scenario_perception_pipeline.cpp  scenario_servo_pipeline.cpp
src/scenarios/basic_topic_sub_pub/: basic_topic_publisher.cpp  scenario_basic_subscription.cpp
src/scenarios/moveit_task_constructor/: pick_place_demo_parameters.yaml  pick_place_task.cpp  scenario_moveit_task_constructor.cpp
test/: test_scenario_perception_pipeline.cpp
