<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_middleware_benchmark</name>
  <version>0.0.0</version>
  <description>Middleware Benchmark Tool For MoveIt2</description>
  <maintainer email="cihataltiparmak1@gmail.com">Cihat Kurtuluş Altıparmak</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>benchmark</depend>
  <depend>dynmsg</depend>
  <depend>nav_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>rmw_zenoh_cpp</exec_depend>
  <exec_depend>rmw_fastrtps_cpp</exec_depend>
  <exec_depend>rmw_cyclonedds_cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
